spes: parts: Convert to SwitchPreferenceCompat
Change-Id: Ic1cbaba37d499da1855af9c3930f2df426e2d3af
Signed-off-by: chrisl7 <wandersonrodriguesf1@gmail.com>

--- a/parts/res/xml/oled_features_settings.xml
+++ b/parts/res/xml/oled_features_settings.xml
@@ -18,7 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/oled_hbm_title" >
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="hbm_pref"
         android:title="@string/oled_hbm_title" />
 
