spes: overlay: Update stock Fingerprint
Change-Id: I9db358f191585fc06a7a7dd9a5ed1dcb5c6b4421
Signed-off-by: chrisl7 <wandersonrodriguesf1@gmail.com>

--- a/overlay/AOSPASpesFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPASpesFrameworksOverlay/res/values/config.xml
@@ -17,7 +17,7 @@
 <resources>
 
     <!-- Fingerprint from stock ROM -->
-    <string name="config_stockFingerprint" translatable="false">Redmi/spes_global/spes:13/TKQ1.221114.001/V14.0.3.0.TGCMIXM:user/release-keys</string>
+    <string name="config_stockFingerprint" translatable="false">Redmi/spes_global/spes:13/TKQ1.221114.001/V816.0.3.0.TGCMIXM::user/release-keys</string>
 
     <!-- Defines the sysfs attribute path used by the device
          to enable/disable DC dimming. -->
